Added full map of North America

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.js"></script>
-
+    <script src="dist/geotiff.bundle.js"></script>
 
     <script type="application/javascript" src="preprocess.js"></script>
 
