Added the year slider using code from homework 4

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Project - Changes in Bird Populations in North America </title>
+    <link rel="stylesheet" href="styles.css"/>
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.js"></script>
