--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://d3js.org/d3-selection.v1.min.js"></script>
     <script src="https://d3js.org/d3-transition.v1.min.js"></script>
     <script src="https://d3js.org/d3-drag.v1.min.js"></script>
-    <script src="https://d3js.org/d3-brush.v1.’min.js"></script>
+    <script src="https://d3js.org/d3-brush.v1.min.js"></script>
   </head>
   <body>
     <noscript>
