--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <script src="https://d3js.org/d3-transition.v1.min.js"></script>
     <script src="https://d3js.org/d3-drag.v1.min.js"></script>
     <script src="https://d3js.org/d3-brush.v1.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </head>
   <body>
 
@@ -33,7 +38,11 @@
         <div>Will Richards, Corin Thummel</div>
         <br>
         <h4>Select a species to visualize</h4>
-        <v-select              multiple v-model="selectedSpecies" :options="allSpecies" filled chips multipl> </v-select>
+        <div>
+            <form id="birdButtonArray" class="btn-group btn-group-toggle" data-toggle="buttons">
+              
+            </form>
+        </div>
       </header>
 
 
@@ -77,6 +86,7 @@
     </div>
     <script type="application/javascript" src="js/map.js"></script>
     <script type="application/javascript" src="js/seasonalData.js"></script>
+    <script type="application/javascript" src="js/queue.js"></script>
     <script type="application/javascript" src="js/linechart.js"></script>
     <script type="application/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="styles.css"/>
